# salt

./: .gitignore  .gitleaks.toml  .gitmodules  .mcp.json  .pre-commit-config.yaml  .salt-lint  .yamllint  AGENTS.md  CLAUDE.md  Justfile  MISSING-TOOLS.md  README.md  README.ru.md  TODO.md  TODO.ru.md  amnezia.sls  apply_cachyos.sh  apply_config.sh  build_amnezia.sh  build_rpms.sls  compare.py  debug_rpm_ostree.sh  display_info.sls  duf-rpm.sls  duf.sls  fedora-silverblue.ks  fonts.sls  gopass-setup.md  hy3.sls  install_rpms.sls  migration.md  missing-packages.txt  mpd.sls  nix.sls  nixos-config-migration.md  packages.sls  pyproject.toml  rebase-hyprland.sh  rebase-wayfire.sh  remaining-packages.txt  (+6 more)
docs/: DEPLOYMENT.md  MISSING-TOOLS.md  adding-host.md  adding-host.ru.md  audit-prompt.xml  audit-report.md  audit-report.ru.md  autoparallel-research.md  autoparallel-research.ru.md  best-practices.md  best-practices.ru.md  boot-optimization.md  boot-optimization.ru.md  cmd-run-standard.md  cmd-run-standard.ru.md  containerized-services.md  containerized-services.ru.md  data-inventory.md  data-inventory.ru.md  deploy-cachyos.md  deploy-cachyos.ru.md  design-lint-crossfile.md  design-lint-crossfile.ru.md  gh-issues-export.md  gh-issues-export.ru.md  gopass-age-recovery.md  gopass-age-recovery.ru.md  gopass-setup.md  gopass-setup.ru.md  image-gen-roster.md  image-gen-roster.ru.md  (+48 more)
stream-stt/: pyproject.toml
stream-stt/stream_stt/: __init__.py  audio.py  buffer.py  cli.py  output.py  pipeline.py  vad.py  whisper_binding.py
stream-stt/tests/: test_buffer.py  test_output.py
(+1285 files in other folders)
