[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stream-stt"
version = "0.1.0"
description = "Streaming speech-to-text via PipeWire and whisper.cpp"
requires-python = ">=3.12"
dependencies = [
    "numpy",
]

[project.scripts]
stream-stt = "stream_stt.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
